# Comercial_taller_PL_SQL

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  init_repo.bat  pyproject.toml  update_repo.bat
scripts/: run_dev.bat
sql/: 01_tables.sql  02_constraints.sql  03_sequences.sql  10_pkg_auditoria.pks  11_pkg_auditoria.pkb  20_pkg_ventas.pks  21_pkg_ventas.pkb  30_pkg_alquileres.pks  31_pkg_alquileres.pkb  40_pkg_mantenimientos.pks  41_pkg_mantenimientos.pkb  50_views_bi.sql  90_seed_demo.sql  95_demo_runbook.sql  99_grants.sql  99_security_roles.sql  Nuevo documento de texto.txt
src/app/: main.py
src/app/api/routes/: health.py  ventas.py  version.py
src/app/api/schemas/: ventas.py
src/app/core/: config.py  errors.py  logging.py
src/app/db/: pool.py
src/app/services/: ventas_service.py
tests/: .env  conftest.py  test_health.py
